<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Workout Log</string>
    <string name="title_add_lifts">Exercises</string>
    <string name="title_today">Workout</string>
    <string name="title_progress">Progress</string>

    <!--Splash screen text-->
    <string name="splashTxt">HEAVY</string>

    <!--Edit Lifts strings-->
    <string name="liftEditLbl">Your Split</string>
    <string name="add_lift_hint">Name of lift</string>
    <string name="saveTxt">Save</string>

    <!--Today strings-->
    <string name="todayTxt">Workout</string>

    <!--Progress strings-->
    <string name="progressTxt">Your Progress</string>
    <string name="sortText">Sorting by:</string>

    <!--Add/Edit lift UI-->
    <string name="addLiftTxt">Add or Edit Lift</string>
    <string name="cancelAddTxt">Cancel</string>

    <!--Lift recyclerview-->
    <string name="liftSubtitle">%d x %d</string>

    <!--Lift Card view-->
    <string name="weightCardLbl">Weight</string>
    <string name="repsCardLbl">Reps</string>
    <string name="prevWeightLbl">Previous Weight: %.2f lbs</string>
    <string name="setNumLbl">Set: %d of %d</string>
    <string name="nextSetLbl">Next Set</string>
    <string name="finalSetLbl">Finish Lift</string>
    <string name="completedLbl">Lift Complete</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>