<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/mainCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            android:elevation="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/liftCardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="24sp"
                    app:autoSizeMaxTextSize="48sp"
                    app:autoSizeStepGranularity="2sp"
                    android:layout_margin="16dp"/>

                <LinearLayout
                    android:id="@+id/weightInputContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/liftCardTitle">

                    <TextView
                        android:id="@+id/weightSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_margin="16dp"
                        android:text="@string/weightCardLbl"
                        />

                    <EditText
                        android:id="@+id/weightInput"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:layout_marginVertical="16dp"
                        android:inputType="numberDecimal"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/repsInputContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/weightInputContainer">

                    <TextView
                        android:id="@+id/repsSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_margin="16dp"
                        android:text="@string/repsCardLbl"/>

                    <EditText
                        android:id="@+id/repsInput"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:layout_marginVertical="16dp"
                        android:inputType="number"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/prevWeightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_margin="16dp"
                    android:layout_below="@id/repsInputContainer"/>

                <TextView
                    android:id="@+id/setCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/prevWeightTextView"
                    android:textSize="36sp"
                    android:layout_margin="16dp"/>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/btnDiv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/setCountTextView"/>

                <Button
                    android:id="@+id/nextSetBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="30sp"
                    android:text="@string/nextSetLbl"
                    android:textColor="@drawable/button_state_colors"
                    android:layout_below="@id/btnDiv"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>